# pygroundedweb

./: .readthedocs.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-pypi.yml
docs/: Makefile  api.rst  conf.py  index.rst  tutorial.rst  usage.rst
src/pygroundedweb/: __init__.py
src/pygroundedweb/client/: __init__.py  analysis.py  base.py  client.py  configuration.py  dataset.py  exception.py
src/pygroundedweb/models/: __init__.py  analysis.py  base.py  configuration.py  dataset.py  dataset_photo.py  scalebar.py  selection.py  user.py
src/pygroundedweb/models/tools/: base.py
src/pygroundedweb/models/tools/cloud_processor/: __init__.py  base.py  cloud_compare.py
src/pygroundedweb/models/tools/detector/: __init__.py  base.py  cctag.py
src/pygroundedweb/models/tools/sfm/: __init__.py  base.py  enums.py  micmac.py
