[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pygroundedweb"
version = "0.1.0"
description = "Client Python pour l'API Grounded Web"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Norman François", email = "normanfrancois2004@gmail.com" }
]
requires-python = ">=3.10"

dependencies = [
    "requests>=2.32.0",
    "pydantic>=2.0"
]

[tool.setuptools.packages.find]
where = ["src"]
