[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pygroundedweb"
version = "0.2.0"
description = "SDK Python pour l'API GroundedWeb"
readme = "README.md"
license = { text = "GPL-3.0-only" }
authors = [
  { name = "Norman François", email = "normanfrancois2004@gmail.com" }
]
requires-python = ">=3.9"

dependencies = [
    "requests==2.32.5",
    "pydantic>=2.12.5",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/Norman-Francois/pygroundedweb"
Issues = "https://github.com/Norman-Francois/pygroundedweb/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pygroundedweb*"]

[tool.setuptools.package-data]
"*" = ["*.pyi", "py.typed"]