[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pygroundedweb"
version = "1.0.1"
description = "SDK Python pour l'API GroundedWeb"
readme = "README.md"
license = { text = "GPL-3.0-only" }
authors = [
  { name = "Norman François", email = "normanfrancois2004@gmail.com" }
]
requires-python = ">=3.9"

dependencies = [
    "requests==2.32.5",
    "pydantic>=2.12.5",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/Norman-Francois/pygroundedweb"
Issues = "https://github.com/Norman-Francois/pygroundedweb/issues"
Documentation = "https://pygroundedweb.readthedocs.io/fr/latest/index.html"

[project.optional-dependencies]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pygroundedweb*"]

[tool.setuptools.package-data]
"*" = ["*.pyi", "py.typed"]